feat(terms): support non-financial authorizations
